--- a/about/index.html
+++ b/about/index.html
@@ -3,15 +3,6 @@
 
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BTNX2CWV9Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-BTNX2CWV9Z');
-</script>
     <meta charset='utf-8'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
 
@@ -375,7 +366,7 @@
 						</div>
 						<div class="col-md-6 px-4" style="padding-bottom:5em;">
 							<h6> ©️ 版权声明</h6>
-							<p class="p_footer" style="font-size:13px;">本网页基于 Github Evironment环境搭建。部分组件引用自网络。</p>
+							<p class="p_footer" style="font-size:13px;">本网页基于 Github Environment环境搭建。部分组件引用自网络。</p>
 							<a href="" target="_blank" class="btn-footer a_footer">
 								项目地址</a><br>
 						</div>
